--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pyodide": "^0.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-split-pane": "^3.0.6",
     "sass": "^1.69.3",
     "tailwind-merge": "^3.4.0"
   },
