--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^17.0.2",
     "react-split-pane": "^3.0.6",
     "sass": "^1.69.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
