--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
     "pyodide": "^0.29.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.13.1",
     "react-split-pane": "^3.0.6",
     "sass": "^1.69.3",
     "tailwind-merge": "^3.4.0",
@@ -27,8 +28,8 @@
     "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.1",
-    "@types/react": "^17.0.91",
-    "@types/react-dom": "^17.0.26",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.1",
